# HousePrediction

./: .gitignore  README.md  backup_section4.md  filestructure.md  model.md  newplan.md  ollama_context.md  ollama_setup_guide.md  project_summary.md  pyproject.toml  requirements.txt  validate_prediction.py
docs/: conclusion.md  notebook_summary.md  problem-statement.md
models/: CatBoost_Optimized_metadata.json  ElasticNet_Optimized.joblib  ElasticNet_Optimized_metadata.json  GradientBoosting_Optimized.joblib  GradientBoosting_Optimized_metadata.json  Lasso_Optimized.joblib  Lasso_Optimized_metadata.json  LightGBM_Optimized.joblib  LightGBM_Optimized_metadata.json  RandomForest_Optimized_metadata.json  Ridge_Optimized.joblib  Ridge_Optimized_metadata.json  Simple_Ensemble_metadata.json  Stacking_Ensemble_metadata.json  Weighted_Ensemble_metadata.json  XGBoost_Optimized_metadata.json  catboost_optimized.pkl  elastic_net_optimized.pkl  ensemble_weights_optimized.pkl  feature_order.json  final_model.pkl  final_model_config.json  final_model_metadata.json  lightgbm_optimized.pkl  model_summary.json  scaler.pkl
notebooks/: 01.ipynb  01_data_exploration.ipynb  01_exploration.ipynb  02.ipynb  02_data_preprocessing.ipynb  02_preprocessing.ipynb  03 copy.ipynb  03-new.ipynb  03.ipynb  03_feature_engineering.ipynb  04-new.ipynb  04.ipynb  04_model_training.ipynb  04_modeling copy.ipynb  04_modeling.ipynb  04_modelling.ipynb  05_model_evaluation.ipynb  data_description_parser.py  example_feature_usage.py  n.ipynb  submission_simple_ensemble_CatBoost_XGBoost_LightGBM.csv  (+4 more)
(+43 files in other folders)
